codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__full_access_confirmation_cancel_notice.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "notices[0]"
---
• Full access was not enabled; permissions are unchanged. To enable it, choose Full Access, then "Yes, continue anyway".
