codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__gpt_5_6_model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access hidden models by running corbanu -m <model_name> or in your config.toml

› 1. GPT-5.6-Sol (current)  Model: gpt-5.6-sol. Latest frontier agentic coding model.
  2. GPT-5.6-Terra          Model: gpt-5.6-terra. Balanced agentic coding model for everyday
                            work.
  3. GPT-5.6-Luna           Model: gpt-5.6-luna. Fast and affordable agentic coding model.

  Press enter to confirm or esc to go back
